Fix the weird CodePen bug where svg icons are slightly misaligned

--- a/src/shared/components/SvgIcon.css
+++ b/src/shared/components/SvgIcon.css
@@ -8,3 +8,11 @@
 .container.fill {
   width: 100%;
 }
+
+.container.absoluteFill {
+  width: 100%;
+  & > svg {
+
+    position: absolute 0;
+  }
+}
